@@ -70,7 +70,7 @@
             "MIME::Base64" : "2.1",
             "MIME::QuotedPrint" : "0",
             "URI" : "1.10",
-            "base" : "0",
+            "parent" : "0",
             "perl" : "5.008001",
             "strict" : "0",
             "warnings" : "0"
